@@ -1,3 +1,13 @@
+2008-06-15  Curtis Gedak  <gedakc@gmail.com>
+
+	* include/Dialog_Base_Partition.h,
+	  src/Dialog_Base_Partition.cc,
+	  include/Dialog_Partition_New.h,
+	  src/Dialog_Partition_New.cc: Migrated checkbutton.
+	  - Moved "Round to cylinders" checkbutton from partition New
+	    dialog to partition base dialog so that it may be used
+	    by all inheritors (e.g., New, Copy, and Resize/Move).
+
 2008-06-12  Curtis Gedak  <gedakc@gmail.com>
 
 	* src/GParted_Core.cc: Changed 3 grammatical errors to dashes.
